<resources>
    <string name="app_name">PocketLibrary</string>
    <string name="title_activity_read">Read</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="book_name">Book Name</string>
    <string name="author">Author</string>
    <string name="comment">Comment</string>
    <string name="get_data">Get Data</string>
    <string name="book_name2">Book Name</string>
</resources>